# videohosting

./: .gitignore  pyproject.toml
authentication/: admin.py  dataclasses.py  managers.py  models.py  serializers.py  service.py  views.py
authentication/migrations/: 0001_initial.py
core/: routers.py  settings.py  urls.py
